@@ -95,3 +95,9 @@ log_opt = Login Options
 autologin = Autologin
 access_level = Access Level
 your_data = Your Data
+
+# other
+
+delete_series = Delete Series
+delete_series_help = this will delete all the programs from this series as well
+delete_programme = Delete Programme
