@@ -6,7 +6,7 @@
 <script language="JavaScript" src="{$root}scripts.js"></script>
 </head>
 
-<body bgcolor="#E7EBF7" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onLoad="{if $window_destroy}window.close(); opener.location='{$destination}?{$get_data}'; {/if} window.focus(); return false;">
+<body bgcolor="#E7EBF7" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onLoad="{if $window_destroy}window.close(); {if $destination}opener.location='{$destination}?{$get_data}';{else}opener.reload();{/if}{/if} window.focus(); return false;">
 <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#FFFFFF">
   <tr> 
     <td width="150" bgcolor="#660000">&nbsp;</td>
